removed web flux from registry lottery and added rest template